--- a/src/templates/admin/admin_index.html
+++ b/src/templates/admin/admin_index.html
@@ -85,8 +85,8 @@
         <div class="carousel-item active">
           <img src="../static/assets/img/hero_1.jpg" alt="">
           <div class="carousel-container">
-            <h2>All love begins and ends there.</h2>
-            <p>There’s no way to be a perfect mother and a million ways to be a good one.</p>
+<!--            <h2>All love begins and ends there.</h2>-->
+<!--            <p>There’s no way to be a perfect mother and a million ways to be a good one.</p>-->
           </div>
         </div><!-- End Carousel Item -->
 
