user module partialy completed

--- a/src/templates/Seller/seller_index.html
+++ b/src/templates/Seller/seller_index.html
@@ -50,7 +50,7 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="admin_home" class="">Home</a></li>
+          <li><a href="seller_home" class="">Home</a></li>
 
 <!--          <li class="dropdown"><a href="#"><span>Manage</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>-->
 <!--            <ul>-->
