--- a/src/templates/user/user_index.html
+++ b/src/templates/user/user_index.html
@@ -50,7 +50,7 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="admin_home" class="">Home</a></li>
+          <li><a href="user_home" class="">Home</a></li>
 
 <!--          <li class="dropdown"><a href="#"><span>Manage</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>-->
 <!--            <ul>-->
@@ -63,9 +63,9 @@
 
 <!--            </ul>-->
 <!--          </li>-->
-               <li><a href="manage_events#about">Manage Events</a></li>
-               <li><a href="view_bookings#about">View Bookings</a></li>
-               <li><a href="view_cancellation#about">View Cancellation</a></li>
+               <li><a href="choose_event#about">Search For Events</a></li>
+               <li><a href="view_bookings#about">Manage Bookings</a></li>
+               <li><a href="view_cancellation#about">Canceled Bookings</a></li>
                <li><a href="/logout">Logout</a></li>
 
 
