--- a/src/templates/Seller/add_event_details.html
+++ b/src/templates/Seller/add_event_details.html
@@ -32,6 +32,30 @@
       <td><input type="text" name="textfield4" required></td>
     </tr>
 
+      <tr>
+      <th>Location</th>
+      <td><input type="text" name="location" required></td>
+    </tr>
+
+      <tr>
+      <th>Type</th>
+<td>
+  <select name="type">
+    <option value="dj_night">DJ Night</option>
+    <option value="concert">Concert</option>
+    <option value="seminar">Seminar</option>
+    <option value="workshop">Workshop</option>
+    <option value="webinar">Webinar</option>
+    <option value="conference">Conference</option>
+    <option value="exhibition">Exhibition</option>
+    <option value="sports_event">Sports Event</option>
+    <option value="festival">Festival</option>
+    <option value="theater_show">Theater Show</option>
+  </select>
+</td>
+
+    </tr>
+
      <tr>
       <th>Number of Tickets</th>
       <td><input type="text" name="textfield5" required></td>
