user module functions going on

--- a/src/templates/login_index.html
+++ b/src/templates/login_index.html
@@ -54,7 +54,7 @@
 
 						<div>
 							<a href="user_reg" class="txt1 text text-primary" >
-								Seller Register
+								User Register
 							</a>
 							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 							<a href="seller_reg" class="txt1 text text-primary">
