--- a/src/templates/user/manage_booking.html
+++ b/src/templates/user/manage_booking.html
@@ -145,7 +145,7 @@
           <p><strong>Date:</strong> {{ event['date'] }}</p>
           <p><strong>Tickets:</strong> {{ event['ticket_count'] }}</p>
           <a href="view_booking_details?eid={{event['eid']}}&id={{event['id']}}" class="btn">View Details</a>
-          <a href="cancel_booking?id={{event['id']}}" class="btn cancel-btn">Cancel Booking</a>
+<!--          <a href="cancel_booking?id={{event['id']}}" class="btn cancel-btn">Cancel Booking</a>-->
         </div>
 
         <!-- Ticket Image -->
