--- a/src/templates/user/user_index.html
+++ b/src/templates/user/user_index.html
@@ -66,7 +66,7 @@
           <li><a href="user_home" class="">Home</a></li>
           <li><a href="choose_event#about">Search For Events</a></li>
           <li><a href="manage_bookings#about">Manage Bookings</a></li>
-          <li><a href="view_cancellation#about">Canceled Bookings</a></li>
+<!--          <li><a href="view_cancellation#about">Canceled Bookings</a></li>-->
           <li><a href="/logout">Logout</a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
