scam report function

--- a/src/templates/admin/takeaction.html
+++ b/src/templates/admin/takeaction.html
@@ -93,7 +93,7 @@
     <h2>🚨 Take Action</h2>
 
 
-    <form action="" method="POST">
+    <form action="submit_action" method="POST">
       <label for="action">Action to Take:</label>
       <select id="action" name="action" required>
         <option value="" disabled selected>Select an action</option>
