fixed some errors

--- a/src/templates/user/choose_event.html
+++ b/src/templates/user/choose_event.html
@@ -176,7 +176,7 @@
         <div class="text">Amusement Park</div>
       </div>
     </div>
-    <button type="submit">Submit</button>
+    <button type="submit">Search</button>
   </form>
   <script>
     function selectOption(box) {
