manage event function edited

--- a/src/templates/Seller/manage_events.html
+++ b/src/templates/Seller/manage_events.html
@@ -28,10 +28,17 @@
       <td><img src="../static/uploads/{{i['image']}}" width="100px" height="100px"></td>
       <td>{{i['date']}}</td>
       <td>
-      <p><a href="manage_ticket?id={{i['id']}}">Manage Tickets</a></p>
+      <p><a href="manage_ticket?id={{i['id']}}">Tickets</a></p>
 
       <br>
         <a href="delete_event?id={{i['id']}}">Delete</a>
+
+        <br>
+
+        <br>
+
+        <a href="edit_event?id={{i['id']}}">Edit</a>
+
       </td>
     </tr>
 
