--- a/src/templates/Seller/manage_tickets.html
+++ b/src/templates/Seller/manage_tickets.html
@@ -12,7 +12,7 @@
       <th scope="col">Total Tickets</th>
       <th scope="col">Total Booked Tickets</th>
       <th scope="col">Currently Available Tickets</th>
-      <th scope="col">Manage Tickets</th>
+<!--      <th scope="col">Manage Tickets</th>-->
     </tr>
 
 
@@ -22,8 +22,8 @@
       <td>{{val2['booked']}}</td>
       <td>{{val3['available']}}</td>
 
-      <td>
-      <p><a href="#">Edit</a></p></td>
+<!--      <td>-->
+<!--      <p><a href="#">Edit</a></p></td>-->
     </tr>
 
 
