QR code scanner

--- a/src/templates/admin/verify seller.html
+++ b/src/templates/admin/verify seller.html
@@ -3,7 +3,7 @@
 <div class="container mt-4">
   <div class="card shadow-sm">
     <div class="card-body">
-      <form id="form1" name="form1" method="get" action="/manage_panchayath#about">
+      <form id="form1" name="form1" method="get" action="">
         <div class="table-responsive">
           <table class="table table-bordered table-hover table-striped">
             <thead class="table-dark">
