--- a/src/templates/Seller/booking_details.html
+++ b/src/templates/Seller/booking_details.html
@@ -107,6 +107,8 @@
           <p><strong>Name:</strong> {{ i['name'] }}</p>
           <p><strong>Date of Birth:</strong> {{ i['dob'] }}</p>
           <p><strong>Gender:</strong> {{ i['gender'] }}</p>
+          <p><strong>Govt ID Type:</strong> {{ i['gov_id_type'] }}</p>
+          <p><strong>Govt ID Number:</strong> {{ i['gov_id'] }}</p>
         </div>
       {% endfor %}
     </div>
